# GuitarPi

./: .gitignore  CMakeLists.txt  README.md  alsa  alsa_tutorial.cpp  alsa_utils.cpp  alsa_utils.h  apply_effects.h  game_loop  game_loop.cpp  main.cpp  research.md  settings.json  tutorial
libraries/: alsa_utils.h  apply_effects.h  pedalSettings.json  pedalstruct.h
libraries/pedals/: compressor_pedal.h  delay_pedal.h  detune.h  distortion_pedal.h  echo_pedal.h  filter_pedal.h  fuzz_pedal.h  highpass_pedal.h  lowpass_pedal.h  reverb_pedal.h  reverse_delay_pedal.h
